# what-to-eat

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/check-versions/: Dockerfile  action.yaml  requirements.txt
.github/actions/check-versions/app/: main.py
.github/workflows/: codeql.yml  release.yml  tests.yml
docs/: list-all-restaurants.md  random.md
tests/: conftest.py  factories.py  test_ls.py  test_version.py
tests/gateways/: test_wolt.py
tests/gateways/fixtures/wolt/: restaurants.json  sections.json
what_to_eat/: __init__.py  __main__.py  config.py  controllers.py  main.py  prompt.py  validators.py
what_to_eat/gateways/: location.py  wolt.py
what_to_eat/models/: __init__.py  config.py  location.py  query.py  wolt.py
what_to_eat/services/: display.py  filters.py  profile.py  weights.py
what_to_eat/utils/: cache.py  handle.py  prompt.py
wte/: __main__.py  config.py  controllers.py  main.py  validators.py
wte/gateways/: location.py  wolt.py
wte/models/: config.py  location.py  wolt.py
wte/services/: display.py  filters.py  profile.py  utils.py  weights.py
