[tool.poetry]
name = "what-to-eat"
version = "1.0.1"
description = "What to eat? CLI tool to interaction with Wolt API"
authors = ["Kamil Woźniak <info@kamilwozniak.com>"]
readme = "README.md"

[tool.poetry.scripts]
what-to-eat = "what_to_eat.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pydantic = "^1.10.7"
httpx = ">=0.23.3,<0.25.0"
inquirer = ">=2.10.1,<4.0.0"

[tool.poetry.urls]
homepage = "https://github.com/Valaraucoo/what-to-eat"
repository = "https://github.com/Valaraucoo/what-to-eat"
documentation = "https://github.com/Valaraucoo/what-to-eat"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.124"
pytest = "^7.2.2"
mypy = "^0.990"
factory-boy = "^3.2.1"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "Q", "U", "N", "C", "B", "T"]
ignore = ["T201", "E999", "B008", "B904"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false
show_error_codes = true

[tool.mypy-app.cache]
ignore_errors = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"

[tool.black]
line-length = 120
target-version = ["py311"]
